--- a/plugins/dokter_igd/view/admin/form.soap.html
+++ b/plugins/dokter_igd/view/admin/form.soap.html
@@ -389,7 +389,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
@@ -422,7 +423,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
