--- a/plugins/rawat_inap/view/admin/form.soap.html
+++ b/plugins/rawat_inap/view/admin/form.soap.html
@@ -378,7 +378,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
