--- a/plugins/vclaim/view/admin/form.sep.html
+++ b/plugins/vclaim/view/admin/form.sep.html
@@ -610,7 +610,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
@@ -629,7 +630,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
@@ -646,7 +648,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
@@ -663,7 +666,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
@@ -681,7 +685,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
