--- a/plugins/dokter_ranap/view/admin/form.soap.html
+++ b/plugins/dokter_ranap/view/admin/form.soap.html
@@ -380,7 +380,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
@@ -415,7 +416,8 @@ $("#form_soap").on("click",".resume", function(event){
 
   modal.off('show.bs.modal');
   modal.on('show.bs.modal', function () {
-      modalContent.load(loadURL);
+    modalContent.html('Loading...');
+    modalContent.load(loadURL);
   }).modal();
   return false;
 });
