--- a/plugins/vedika/view/admin/lengkap.html
+++ b/plugins/vedika/view/admin/lengkap.html
@@ -235,7 +235,8 @@
 
     modal.off('show.bs.modal');
     modal.on('show.bs.modal', function () {
-        modalContent.load(loadURL);
+      modalContent.html('Loading...');
+      modalContent.load(loadURL);
     }).modal();
     return false;
   });
